--- a/docs/mechanical/thermal/blisk_thermal.ipynb
+++ b/docs/mechanical/thermal/blisk_thermal.ipynb
@@ -254,10 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "id": "d0a38cd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.124474755508891\n",
+      "504.4040593276217\n",
+      "4.124474755508891\n"
+     ]
+    }
+   ],
    "source": [
     "gas.Y = {fuel: 1, oxidiser: MR}\n",
     "mix = ct.Mixture(mix_phases)\n",
@@ -266,9 +276,56 @@
     "mix.P = P_c\n",
     "mix.equilibrate(\"HP\")\n",
     "\n",
+    "print(gas.density)\n",
+    "\n",
+    "T_final = gas.T\n",
+    "\n",
     "# We can then our key properties\n",
     "cp = gas.cp_mass\n",
-    "R = ct.gas_constant / gas.mean_molecular_weight"
+    "R = ct.gas_constant / gas.mean_molecular_weight\n",
+    "\n",
+    "print(R)\n",
+    "\n",
+    "gamma = gas.cp_mass / gas.cv_mass\n",
+    "\n",
+    "print(P_c/(R*T_final))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fc00fca",
+   "metadata": {},
+   "source": [
+    "We can use these to get the velocity of the gas at inlet conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "f6b9f70b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "c &= \\left( \\gamma \\cdot R \\cdot T_{final} \\cdot \\left( 0.85 \\right) ^{ 2 } \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) }  = \\left( 1.290 \\cdot 504.404 \\cdot 1201.691 \\cdot \\left( 0.85 \\right) ^{ 2 } \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } &= 751.687  \n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%render\n",
+    "\n",
+    "c = (gamma * R* T_final*0.85**2)**(1/2)"
    ]
   },
   {
@@ -309,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "135952b5",
    "metadata": {},
    "outputs": [
@@ -327,6 +384,10 @@
        "d_{1} &= 5.160 \\times 10 ^ {-3} \\; \n",
        "\\\\[10pt]\n",
        "\\mu &= 7.263 \\times 10 ^ {-5} \\; \n",
+       "\\\\[10pt]\n",
+       "k &= 4.000 \\times 10 ^ {-1} \\; \n",
+       "\\\\[10pt]\n",
+       "\\mathrm{Pr} &= 3.229 \\times 10 ^ {-1} \\; \n",
        "\\end{aligned}\n",
        "\\]"
       ],
@@ -348,7 +409,8 @@
     "d_1 = 5.16e-3\n",
     "\n",
     "mu = 0.72629e-4\n",
-    "k = 6.4891e-1\n"
+    "k = 4e-1\n",
+    "Pr = 0.3229\n"
    ]
   },
   {
@@ -361,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "id": "5aac6507",
    "metadata": {},
    "outputs": [
@@ -397,7 +459,89 @@
    "id": "d252b85e",
    "metadata": {},
    "source": [
-    "We can then calculate our Nusselt NUmber"
+    "We can then calculate our Nusselt Number accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "60d65854",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "\\Nu &= 0.023 \\cdot \\left( \\mathrm{Re} \\right) ^{ \\left( \\frac{ 4 }{ 5 } \\right) } \\cdot \\left( \\mathrm{Pr} \\right) ^{ 0.3 }  = 0.023 \\cdot \\left( 50667.574 \\right) ^{ \\left( \\frac{ 4 }{ 5 } \\right) } \\cdot \\left( 0.323 \\right) ^{ 0.3 } &= 95.111  \n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%render\n",
+    "\n",
+    "Nu = 0.023 * Re**(4/5) * Pr**0.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c88cc7a5",
+   "metadata": {},
+   "source": [
+    "From here we can solve for our heat transfer coefficient of the gas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "bd73a092",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "h &= \\frac{ \\Nu \\cdot k }{ d_{1} }  = \\frac{ 95.111 \\cdot 0.400 }{ 0.005 } &= 7372.973  \n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%render\n",
+    "\n",
+    "h = (Nu * k)/d_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b443c7f",
+   "metadata": {},
+   "source": [
+    "We can then input these conditions into our solver!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e332795",
+   "metadata": {},
+   "source": [
+    "## 3 - Thermal Results"
    ]
   }
  ],
